# met-io-rs

./: .env  .gitignore  BlzXRadar_XY.cpp  BlzXRadar_XYInfo.h  Cargo.toml  Dockerfile  a.out  build.rs  demo.data  readme.txt  雷达SA基数据格式.doc
config/: monitor_config.json
palette/: I-01.xml  REFcolortable.xml  V-01_x.xml  V-05.xml  radarBaseReflectivity.xml  xradar.xml
src/: error.rs  grid2img.rs  hdf5_error.rs  hdf5_reader.rs  lib.rs  radar_grid.rs  satlite_reader.rs  transforms.rs  xradar_reader.rs
src/app/: mod.rs  monitor_config.rs  output_type.rs  reader_factory.rs  reader_type.rs
src/converter/: grid2diamond4.rs  grid2img.rs  grid2nom.rs  grid2nompbf.rs  mod.rs  nom2image.rs  normalize_grid.rs
src/data_type/: mod.rs  nom_grid.rs  radial_data.rs  radial_data_ex.rs  single_grid.rs  st_radial_data.rs
src/plotter/: mod.rs
src/protos/: examples.proto  examples.rs  mod.rs  nom.proto  nom.rs
src/reader/: aws_reader.rs  awx_reader.rs  gpf_reader.rs  grib_reader.rs  hdf5_reader.rs  kj_sat_reader.rs  kjh5_sat_reader.rs  mod.rs  radar_386_reader.rs  radar_ka_reader.rs  radar_ka_sx_reader.rs  radar_pd_reade.newr.rs  radar_pd_reader.rs  radar_pt_reader.rs  radar_vbt_gs_reader.rs  warn_h5_reader.rs  xradar_reader.rs
src/reader/cinradar_reader/: cb_reader.rs  cc_reader.rs  mod.rs  sab_reader.rs  sc_reader.rs  sc_reader1.rs  wsr98d_reader.rs
src/utils/: interplate.rs  kjlocationer.rs  mercator_trans.rs  mod.rs  transforms.rs
vcs/: 3d.html  index.html
