[package]
name = "met-io-rs"
version = "0.1.0"
authors = ["cheng <csc00000@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.16"
byteorder = "1.3.4"
binread = "1.0.0"
palette={git="https://gitee.com/oldtree2008/palette"}
log = "0.4.8"
image = "0.23.5"

[[bin]]
name="awx2img"
path="bin/awx2img.rs"
