[package]
name = "met-io-rs"
version = "0.1.0"
authors = ["cheng <csc00000@sina.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.16"
byteorder = "1.3.4"
binread = "1.0.0"
palette={git="https://gitee.com/oldtree2008/palette"}
eccodes-rs={path="./eccodes-rs"}
log = "0.4.8"
image = "0.23.5"
hdf5 = "0.7.0"
ndarray = "0.13.1"
rayon = "1.3.1"
kdtree = "0.6.0"
encoding_rs = "0.8.23"
serde = {version="1.0.111",features=["derive"]}
chrono = "0.4.13"
serde_json = "1.0.56"
anyhow = "1.0.31"
protobuf = "2.16.2"
bincode = "1.3.1"
notify = {path="notify"}
crossbeam-channel = "0.4.3"
env_logger = "0.7.1"
dotenv = "0.15.0"

[build-dependencies]
protobuf-codegen-pure="*"

[[bin]]
name="awx"
path="bin/awx2img.rs"

[[bin]]
name="hdf5data"
path="bin/hdf5data.rs"

[[bin]]
name="h5"
path="bin/hdf5_reader.rs"

[[bin]]
name="xradar"
path="bin/xradar.rs"

[[bin]]
name="vbtradar"
path="bin/vbtradar.rs"

[[bin]]
name="xreader"
path="bin/xradar_reader.rs"

[[bin]]
name="transfer"
path="bin/transfer.rs"

[[bin]]
name="gpf"
path="bin/gpfreader.rs"


[[bin]]
name="kjsat"
path="bin/kjsatreader.rs"

[[bin]]
name="proj"
path="bin/proj.rs"

[[bin]]
name="radar386"
path="bin/radar386.rs"

[[bin]]
name="radarpd"
path="bin/radarpdreader.rs"

[[bin]]
name="radarpt"
path="bin/radarptreader.rs"

[[bin]]
name="radarka"
path="bin/radarkareader.rs"

[[bin]]
name="radarkasx"
path="bin/radarkasxreader.rs"

[[bin]]
name="gribreader"
path="bin/gribreader.rs"

[[bin]]
name="app"
path="bin/app.rs"
